<resources>
    <string name="app_name">FurniScan</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="splashscreen">splashscreen</string>
    <string name="start">start</string>
    <string name="title_1">Discover</string>
    <string name="desc_1">Lorem Ipsum</string>
    <string name="title_2">New Arrival</string>
    <string name="desc_2">Lorem Ipsum</string>
    <string name="title_3">New Discover</string>
    <string name="desc_3">Lorem Ipsum</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="account">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="your_username">Your Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_confirm_password">Confirm Password</string>
    <string name="already">Already have an account?</string>
    <string name="home">Home</string>
    <string name="wishlist">wishlist</string>
    <string name="menu_scan">Scan</string>
    <string name="desc_welcome">go fast, go scan</string>
    <string name="search">search</string>
    <string name="look_for_your_own_taste">look for you own taste</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="all_items">All Items</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="login_success">login succes</string>
    <string name="continue_dialog">continue</string>
    <string name="signup_success">sign up succes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="armchair">Arm Chair</string>
    <string name="price">300$</string>
    <string name="rating">4.7</string>
    <string name="color">Color</string>
    <string name="content_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc consectetur velit at massa vehicula, quis fringilla urna gravida.</string>
    <string name="similar">Similar Products</string>
    <string name="favorite">Favorite</string>
    <string name="logout">logout</string>
    <string name="are_your_sure">Are You Sure</string>
    <string name="cancel">cancel</string>
</resources>