<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_on_boarding_scene"
    tools:context=".ui.onboarding.OnBoardingActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/logoMenu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_onboarding1"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="parent"
        tools:layout_editor_absoluteY="100dp" />

    <TextView
        android:id="@+id/descMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/desc_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/titleMenu1"
        app:layout_constraintStart_toStartOf="@id/titleMenu1"
        app:layout_constraintTop_toBottomOf="@id/titleMenu1" />

    <ImageView
        android:id="@+id/logoMenu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_onboarding2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/title_2"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="411dp" />

    <TextView
        android:id="@+id/descMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/desc_2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/logoMenu2"
        tools:layout_editor_absoluteY="42dp" />

    <ImageView
        android:id="@+id/logoMenu3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_onboarding3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


    <TextView
        android:id="@+id/titleMenu3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/title_3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/logoMenu3"
        app:layout_constraintTop_toBottomOf="@id/logoMenu3" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        app:altSrc="@drawable/baseline_circle_24"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/outline_circle_24"
        app:tint="@color/md_theme_primaryContainer_mediumContrast" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        app:altSrc="@drawable/baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu1"
        app:layout_constraintEnd_toStartOf="@+id/menu3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toTopOf="@+id/menu1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/outline_circle_24"
        app:tint="@color/md_theme_primaryContainer_mediumContrast" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:altSrc="@drawable/baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintEnd_toStartOf="@+id/menu4"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/outline_circle_24"
        app:tint="@color/md_theme_primaryContainer_mediumContrast" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:alpha="0"
        android:text="@string/start"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toTopOf="@+id/menu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>