<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupActivity">

    <ImageView
        android:id="@+id/iv_signup"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintBottom_toTopOf="@+id/tv_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/signup" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:alpha="0"
        android:text="@string/signup"
        android:textColor="@color/md_theme_primary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_signup"
        tools:alpha="100"
        tools:layout_editor_absoluteY="280dp" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:alpha="0"
        android:text="@string/username"
        android:textColor="@color/md_theme_primary"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup"
        tools:alpha="100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="30dp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.dicoding.furniscan.ui.customview.MyEditText
            android:id="@+id/ed_signup_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textColor="@color/md_theme_primary"
        android:textSize="14sp"
        android:textStyle="normal"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etl_username" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="30dp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.dicoding.furniscan.ui.customview.MyEditText
            android:id="@+id/ed_signup_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textColor="@color/md_theme_primary"
        android:textSize="14sp"
        android:textStyle="normal"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etl_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="30dp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.dicoding.furniscan.ui.customview.MyEditText
            android:id="@+id/ed_signup_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_password"
        android:textColor="@color/md_theme_primary"
        android:textSize="14sp"
        android:textStyle="normal"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etl_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="30dp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm_password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.dicoding.furniscan.ui.customview.MyEditText
            android:id="@+id/ed_signup_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:contentDescription="@string/your_password"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry,EditableContentDescCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_button"
        android:text="@string/signup"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintBottom_toTopOf="@+id/toSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/toSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/already" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/md_theme_primary"
            android:text="@string/login" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>